[package]
name = "has"
version = "0.1.0"
authors = ["tomislav"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
scraper = "0.12.0"
structopt = "0.3"
term-table = "1.3.0"